--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ repository               : "0yj/0yj.github.io"
 author:
   # Biographic information
   avatar           : "profile.JPG"
-  name             : "YJ"
-  pronouns         : "she/her" # example: "she/her"  
-  bio              : "No path of flowers leads to glory but sweat and blood."
+  name             : "Yujie"
+  pronouns         : "He/him/his" # example: "she/her"  
+  bio              : "Keep your hacker spirit."
   location         : "Germany"
   employer         : "JKI"
   uri              : # URL
