--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "0yj/0yj.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "IMG_2097.jpg"
+  avatar           : "avatar.jpg"
   name             : "Yujie"
   pronouns         : "He/him/his" # example: "she/her"  
   bio              : "Keep your hacker spirit."
